--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Bookshelf",
+  "name": "Bookshelf",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Closed_Book_Icon.svg/1200px-Closed_Book_Icon.svg.png",
       "sizes": "192x192",
       "type": "image/png"
     }
